add, rename and remove tracks and prizes
